# ENPM808X_Midterm

./: CMakeLists.txt  LICENSE  readme.md
app/: CMakeLists.txt  Coordinate.cpp  Demo.cpp  InverseKinematics.cpp  Joints.cpp  StraightLinePath.cpp  main.cpp
docs/latex/: annotated.tex  class_bar_environment.tex  class_base.tex  class_biggest_int_convertible.tex  class_common_test.tex  class_conversion_helper_base.tex  class_conversion_helper_derived.tex  class_coordinate.tex  class_counter.tex  class_disabled_test.tex  class_expect_failure_test.tex  class_failed_test.tex  class_failing_param_test.eps  class_failing_param_test.tex  class_fatal_failure_in_fixture_constructor_test.tex  class_fatal_failure_in_set_up_test.tex  class_field_helper.tex  class_foo_environment.tex  class_foo_test.tex  class_g_mock_output_test.tex  class_i_joint.eps  class_i_joint.tex  class_i_path_planner.eps  class_i_path_planner.tex  class_integer_function_test.eps  class_integer_function_test.tex  class_interface.tex  class_inverse_kinematic_acme_arm.eps  class_inverse_kinematic_acme_arm.tex  class_inverse_kinematics_base.eps  class_inverse_kinematics_base.tex  class_invoke_helper.tex  class_mock.tex  class_mock_foo.tex  class_my_array.tex  class_my_string.tex  class_my_type.tex  class_non_container.tex  (+33 more)
include/: Coordinate.hpp  Demo.hpp  IPathPlanner.hpp  InverseKinematics.hpp  Joints.hpp  StraightLinePath.hpp  lib.hpp  matplotlibcpp.h
results/: cppCheck.txt  cppLint.txt
test/: CMakeLists.txt  InverseKinematicsTest.cpp  StraightLinePathTest.cpp  mainTest.cpp  test.cpp
